@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Farmacia {
  -NIF
  -email
  -morada
}

class Utilizador {
  -NIF
  -nome
  -email
  -numeroSegurancaSocial
  -password
}

class Administrador {
  -NIF
  -nome
  -email
  -numeroSegurancaSocial
  -password
}

class Endereco {
  -morada
  -latitude
  -longitude
  -altitude
}

class Parque {
  -numeroMaximo
  -tipo
  -maxCap
}

Administrador "1" -- "1" Utilizador: atua como >
Administrador "1" -- "1" Parque: define numeroMaximo >
Farmacia "1" -- "*" Parque: possui >
Farmacia "1" -- "1" Endereco: tem >
Farmacia "1" -- "1" Administrador: tem >

@enduml